tests/baselines/reference/moduleImport.errors.txt
==== tests/cases/compiler/moduleImport.ts (2 errors) ====
    module A.B.C {
        import XYZ = X.Y.Z;
                    ~
!!! error TS2180: Could not find module 'Y' in module 'X'.
        export function ping(x: number) {
            if (x>0) XYZ.pong (x-1);
               ~~~
!!! error TS2095: Could not find symbol 'XYZ'.
        }
    }
    
    module X {
        import ABC = A.B.C;
        export function pong(x: number) {
            if (x > 0) ABC.ping(x-1);
        }
    }